Assigment_2/logs.txt
r "time_t"
   return std::time_t(duration_cast<chrono::seconds>
               ^

/storage/pace-apps/spack/packages/linux-rhel9-x86_64_v3/gcc-11.3.1/gcc-12.3.0-ukkkutsxfl5kpnnaxflpkq2jtliwthfz/bin/../lib/gcc/x86_64-pc-linux-gnu/12.3.0/../../../../include/c++/12.3.0/bits/chrono.h(1245): error: no instance of function template "std::chrono::time_point_cast" matches the argument list
            argument types are: (<error-type>)
   return time_point_cast<system_clock::duration>
          ^
/storage/pace-apps/spack/packages/linux-rhel9-x86_64_v3/gcc-11.3.1/gcc-12.3.0-ukkkutsxfl5kpnnaxflpkq2jtliwthfz/bin/../lib/gcc/x86_64-pc-linux-gnu/12.3.0/../../../../include/c++/12.3.0/bits/chrono.h(1010): note #3327-D: candidate function template "std::chrono::time_point_cast" failed deduction
        time_point_cast(const time_point<_Clock, _Dur>& __t)
        ^

23 errors detected in the compilation of "kernel_backup.cu".
[mfajeau3@atl1-1-03-011-3-0 Assigment_2]$ ^C
[mfajeau3@atl1-1-03-011-3-0 Assigment_2]$ vi kernel_backup.cu 
[mfajeau3@atl1-1-03-011-3-0 Assigment_2]$ nvcc kernel_backup.cu
[mfajeau3@atl1-1-03-011-3-0 Assigment_2]$ ./a.out 134217728
[INFO] Starting bitonic sort with array size: 134217728
[STAGE] Generating random array
[INFO] Original array:
  [464, 976, 550, 745, 148, 267, 606, 808, 642, 240, 726, 729, 687, 576, 753, 82, 322, 687, 430, 884... (134217708 more elements)]
[STAGE] Setting up GPU memory and data transfer
[DEBUG] Allocating GPU memory for 134217728 elements
[DEBUG] Copying data from host to device
[INFO] Data successfully copied to GPU
[STAGE] Starting shared memory bitonic sort on GPU
[INFO] Launch configuration: 524288 blocks, 256 threads per block
[DEBUG] Shared memory size: 1024 bytes
[DEBUG] Using global memory kernel for large array
[INFO] Global memory bitonic sort completed in 378 steps
[DEBUG] Shared memory kernel completed
[INFO] Shared memory bitonic sort completed
[STAGE] Transferring sorted data back to host
[INFO] Sorted array:
  [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0... (134217708 more elements)]
[STAGE] Performing CPU sort for comparison
[STAGE] Validating results
[INFO] Validation successful - GPU and CPU results match!
[INFO] FUNCTIONAL SUCCESS
FUNCTIONAL SUCCESS
Array size         : 134217728
CPU Sort Time (ms) : 25238.148438
GPU Sort Time (ms) : 346.888733
GPU Sort Speed     : 386.918671 million elements per second
PERF PASSING
GPU Sort is  72x faster than CPU !!!
H2D Transfer Time (ms): 50.952705
Kernel Time (ms)      : 185.928955
D2H Transfer Time (ms): 110.007072
